# web-audio-player

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  webpack.config.js
Source/web/: App.js  CMakeLists.txt  index.js
Source/web/components/: EQSlider.js  EqPlugin.js
Source/web/styles/: main.css
